// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reactions Should match snapshot with default emojis 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 72,
      "justifyContent": "space-between",
      "paddingLeft": 12,
      "paddingRight": 12,
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="thumbsup"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="smiley"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="white_check_mark"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="heart"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="eyes"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="raised_hands"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[MockFunction]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Image
        height={32}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/reaction.png",
          }
        }
        style={
          Array [
            Object {
              "tintColor": "#3d3c40",
            },
          ]
        }
        width={32}
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`Reactions Should match snapshot with default emojis 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 72,
      "justifyContent": "space-between",
      "paddingLeft": 12,
      "paddingRight": 12,
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="rocket"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="100"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="thumbsup"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="smiley"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="white_check_mark"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          null,
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Connect(Emoji)
        emojiName="heart"
        size={32}
        textStyle={
          Object {
            "color": "#000",
            "fontWeight": "bold",
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    onPress={[MockFunction]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(61,60,64,0.04)",
            "borderRadius": 4,
            "justifyContent": "center",
          },
          Object {
            "height": 48,
            "width": 48,
          },
        ]
      }
    >
      <Image
        height={32}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/reaction.png",
          }
        }
        style={
          Array [
            Object {
              "tintColor": "#3d3c40",
            },
          ]
        }
        width={32}
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;
